--- a/about.html
+++ b/about.html
@@ -41,17 +41,15 @@
                 
                 <ul>
                     <Li>
-                        Primaire : Gloire Olympique - CEP
+                        Primaire :
                     </Li>
                     <Li>
-                        Secondaire : College Adventiste d'ODZA - BEPC,BAC D
+                        Secondaire : 
                     </Li>
                     <Li>
-                        Cycle Prépa : PREPAVOGT
+                        Academique : 
                     </Li>
-                    <Li>
-                        Cycle Ingénieur : 3il Ingénieurs
-                    </Li>
+            
                 </ul>
                 <h3 class="interet"> <strong>INTERET</strong></h3>
                 <ul>
